# teh_mesta_orders_1

./: .breakpoints  .gitignore  .replit  app.py  aws_files.py  aws_test.py  chart_df_prep.py  description.txt  df_to_excel.py  eo_list_selection.py  eo_tab.py  fleet_data_analisys.py  fleet_data_analisys_2.py  fms_tr.py  func-output_excel.py  func_be_select_data_prep.py  func_eo_job_catalague_prep.py  func_extract_zip.py  func_fleet_avg_age.py  func_fleet_data_infopage.py  func_ktg_data_prep.py  func_main_jobs_prep_v2.py  func_maintanance_jobs_df_prepare.py  func_man_hours_data_prep.py  func_model_eo_select_data_prep.py  func_output_excel.py  func_reglament.py  func_tr_maint_data_prep.py  func_update_downtime_graph_data.py  func_update_ktg_graph_data.py  functions.py  initial_values.py  ktg_table_html.py  maint_jobs_for_sac.py  maint_records_generator.py  messages_orders.py  messages_orders_tab.py  ml_model.py  new_plan_date.py  orders_df_prep.py  (+22 more)
data/: arm_plan.csv  arm_plan_data_with_comments.csv  arm_plan_df.csv  arm_plan_extension_full_eo_list_level_1_level_upper_df.csv  arm_planir_new_plan_date.csv  arm_planir_new_plan_date_2.csv  chart_df.csv  comment_text_comment_category.csv  eo_class.csv  eo_class_data.csv  eo_download_data_raw.csv  eo_filtered_df_delete.csv  eo_qty_by_month.csv  eo_qty_by_years.csv  eo_table.csv  full_eo_list.csv  iw_39_order_category_distribution.csv  job_codes.csv  job_list.csv  last_maint_date.csv  level_1.csv  level_2_list.csv  level_upper.csv  main_eo_class.csv  maint_forms_sorted_df.csv  maintanance_category.csv  man_hours_raw_data_2.csv  (+12 more)
(+39 files in other folders)
