[tool.poetry]
name = "tehmestaorders1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
dash = "^2.0.0"
dash-bootstrap-components = "^1.0.2"
dash-bootstrap-templates = "^1.0.4"
openpyxl = "^3.0.9"
functions = "^0.7.0"
boto3 = "^1.21.31"
sklearn = "^0.0"
yadisk = "^1.2.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
